Fixed mobile-friendly section on iOs

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ li {
 }
 
 
-/* TODO: MAKE RESPONSIVE */
+
 @media (max-width: 800px) {
 
     h1, h2 {
@@ -174,6 +174,7 @@ li {
         outline: none;
         width: 80%;
         height: 100%;
+        min-height: 100svh;
     }
 
 
